# lsrom

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  TODO  cmake_install.cmake  compile_commands.json  lsrom  lsrom.conf  open.pl
include/: Debug.h  FuzzySearch.h  Genre.h  OutputFormatter.h  Rom.h  RomManager.h  last.session  main.h
include/constants/: constants.h  kOptions.h
src/: Debug.cpp  Genre.cpp  OutputFormatter.cpp  Rom.cpp  RomManager.cpp  last.session  main.cpp
